flex wrap and minor spelling correction

--- a/src/component/template/Project-container/Project-container.css
+++ b/src/component/template/Project-container/Project-container.css
@@ -7,6 +7,7 @@
 
 .project-list{
     display: flex;
+    flex-wrap: wrap;
     position: relative;
     justify-content: center;      /* Centers the children as a group */
     align-items: center;          /* Centers the children vertically */
